Fix overflow number from div.I change result box style.In here I add one more style in result-box class.This style is word-wrap: break-word;

--- a/src/main.style.css
+++ b/src/main.style.css
@@ -98,4 +98,5 @@ h2{
     color: black;
     padding: 10px;
     font-size: 20px;
+    word-wrap: break-word;
 }
